# Dicom-Tools

./: .gitattributes  .gitignore  AGENTS.md  BUILD.md  Makefile  QUICKSTART.md  README.md  STRUCTURE.md  plano.md
.github/workflows/: ci.yml  interface.yml
cpp/: CMakeLists.txt  README.md  TASKS.md  input
cpp/scripts/: test_interface.py
cpp/src/: main.cpp
cpp/src/cli/: CLIOptions.h  CLIParser.cpp  CommandRegistry.h
cpp/src/modules/DCMTK/: DCMTKFeatureActions.cpp  DCMTKFeatureActions.h  DCMTKFeatureActions_Basic.inc  DCMTKFeatureActions_Capture.inc  DCMTKFeatureActions_Charset.inc  DCMTKFeatureActions_Metadata.inc  DCMTKFeatureActions_Network.inc  DCMTKFeatureActions_Reports.inc  DCMTKFeatureActions_Segmentation.inc  DCMTKTests.cpp
cpp/src/modules/GDCM/: GDCMFeatureActions.cpp  GDCMFeatureActions.h  GDCMFeatureActions_Codecs.inc  GDCMFeatureActions_Core.inc  GDCMFeatureActions_Directory.inc  GDCMFeatureActions_Metadata.inc  GDCMFeatureActions_Pixel.inc  GDCMTests.cpp
cpp/src/modules/ITK/: ITKFeatureActions.cpp  ITKFeatureActions.h  ITKFeatureActions_Export.inc  ITKFeatureActions_Filters.inc  ITKFeatureActions_Registration.inc  ITKFeatureActions_Resample.inc  ITKFeatureActions_Segmentation.inc  ITKTests.cpp
cpp/src/modules/VTK/: VTKFeatureActions.cpp  VTKFeatureActions.h  VTKFeatureActions_Advanced.inc  VTKFeatureActions_IO.inc  VTKFeatureActions_Resample.inc  VTKTests.cpp
cpp/tests/: README.md  run_all.py  test_dcmtk.cpp  test_edge_cases.cpp  test_framework.h  test_gdcm.cpp  test_integration.cpp  test_interface_smoke.py  test_itk.cpp  test_utils.cpp  test_validation.cpp  test_vtk.cpp
cs/: DicomTools.sln  README.md  TASKS.md  package_cli.sh
cs/DicomTools.Cli/: AnonymizeCommand.cs  AssemblyInfo.cs  CliApp.cs  CliHelpers.cs  CliModels.cs  DicomTools.Cli.csproj  DumpCommand.cs  EchoCommand.cs  ImageCommand.cs  InfoCommand.cs  NetworkCommand.cs  OptionParser.cs  PixelDataHelpers.cs  Program.cs  RtCheckCommand.cs  StatsCommand.cs  StatsHelpers.cs  StructuredReportCommand.cs  TranscodeCommand.cs  ValidateCommand.cs
cs/DicomTools.Tests/: AdvancedCodecTests.cs  AnonymizeCommandTests.cs  ApiUsageTests.cs  CiEnvironment.cs  CliContractTests.cs  CliHelpersTests.cs  CliRunner.cs  CliUnitTests.cs  DicomCharsetTests.cs  DicomDateTimeTests.cs  DicomDictionaryTests.cs  DicomFileOperationsTests.cs  DicomSequenceTests.cs  DicomTools.Tests.csproj  DicomUidTests.cs  DicomValueRepresentationTests.cs  DicomWebIntegrationTests.cs  DicomWebStowServer.cs  DumpCommandTests.cs  EchoCommandTests.cs  ImageCommandTests.cs  ImagingAndMultiframeTests.cs  InMemoryQueryRetrieveScp.cs  InMemoryStoreScp.cs  InMemoryWorklistScp.cs  InfoCommandTests.cs  NetworkStoreTests.cs  OptionParserTests.cs  QueryRetrieveTests.cs  RtCheckCommandTests.cs  RtCheckTests.cs  SampleSeriesHelper.cs  SampleSeriesTests.cs  SeriesLoadTests.cs  StatsHelpersTests.cs  StructuredReportCommandTests.cs  StructuredReportTests.cs  TestCollections.cs  TestSupport.cs  TranscodeAndDirectoryTests.cs  (+4 more)
docs/: 1 Overview.md  1a Architecture-Overview.md  1b Installation-and-Setup.md  1c Quick-Start-Guide.md  2 User-Interfaces.md  2a TkApp-Desktop-GUI.md  2b Contract-Runner-(Headless-CLI).md  2c Web-Viewer-(JavaScript).md  3 CLI-Contract-System.md  3a Contract-Specification.md  3b Adapter-Pattern.md  3c Environment-Configuration.md  4 Language-Implementations.md  4a Python-Backend.md  4b Rust-Backend.md  4c C++-Backend.md  4d C#-Backend.md  4e Java-Backend.md  4f JavaScript-Backend.md  5 DICOM-Operations.md  5a Core-File-Operations.md  5b Image-Conversion-and-Processing.md  5c Tag-Modification-and-Anonymization.md  5d 3D-Volume-Reconstruction.md  5e Network-Operations.md  5f Batch-Processing.md  6 Visualization.md  6a 2D-Stack-Viewing.md  6b 3D-Volume-Rendering.md  6c CPU-Based-Analysis.md  7 Testing.md  7a Testing-Strategy.md  7b Python-Tests.md  7c C#-Tests.md  7d Interface-and-Contract-Tests.md  7e JavaScript-Tests.md  8 Development.md  8a Build-System.md  8b CI-CD-Pipeline.md  8c Adding-a-New-Backend.md  (+2 more)
interface/: ARTIFACTS.md  CONTRACT.md  Makefile  README.md  TASKS.md  __init__.py  app.py  config.py  contract_runner.py  requirements-dev.txt  runtime.py
interface/adapters/: __init__.py  cpp_cli.py  csharp_cli.py  java_cli.py  js_cli.py  python_cli.py  runner.py  rust_cli.py
interface/components/: __init__.py  render_loop.py  viewers.py
interface/input/: __init__.py  adapters.py  controller.py  event_bus.py  tools.py
interface/operations/: __init__.py  catalog.py  specs.py
interface/overlays/: __init__.py  base.py  manager.py
interface/services/: __init__.py  execution.py
interface/state/: __init__.py  frames.py  ui_state.py
interface/tests/: README.md  __init__.py  test_adapter_json_parsing.py  test_adapters_build_cmds.py  test_app_helpers.py  test_app_smoke.py  test_config_module.py  test_contract_ops_mapping.py  test_contract_runner.py  test_contract_runner_flow.py  test_coordinate_consistency.py  test_debounce_and_flow.py  test_event_bus_and_inputs.py  test_execution_service.py  test_geometry.py  test_input_consistency.py  test_meta_docs.py  (+9 more)
java/: TASKS.md
js/: .gitignore  INTEGRATION.md  README.md  TASKS.md
python/: README.md  TASKS.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
rust/: Cargo.toml  README.md  TASKS.md
sample_series/: IM-0001-0001.dcm  IM-0001-0002.dcm  IM-0001-0003.dcm  IM-0001-0004.dcm  IM-0001-0005.dcm  IM-0001-0006.dcm  IM-0001-0007.dcm  IM-0001-0008.dcm  IM-0001-0009.dcm  IM-0001-0010.dcm  IM-0001-0011.dcm  IM-0001-0012.dcm  IM-0001-0013.dcm  IM-0001-0014.dcm  IM-0001-0015.dcm  IM-0001-0016.dcm  IM-0001-0017.dcm  IM-0001-0018.dcm  IM-0001-0019.dcm  IM-0001-0020.dcm  IM-0001-0021.dcm  IM-0001-0022.dcm  IM-0001-0023.dcm  IM-0001-0024.dcm  IM-0001-0025.dcm  IM-0001-0026.dcm  IM-0001-0027.dcm  IM-0001-0028.dcm  IM-0001-0029.dcm  IM-0001-0030.dcm  IM-0001-0031.dcm  IM-0001-0032.dcm  IM-0001-0033.dcm  IM-0001-0034.dcm  IM-0001-0035.dcm  IM-0001-0036.dcm  IM-0001-0037.dcm  IM-0001-0038.dcm  IM-0001-0039.dcm  IM-0001-0040.dcm  (+134 more)
scripts/: package_all.sh  setup_all.sh
(+166 files in other folders)
